[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/animated_shroom.png" type="Texture" id=1]
[ext_resource path="res://Props/shrooms/Shrooms.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 52.9942, 5.06595 )

[sub_resource type="Animation" id=2]
resource_name = "hide"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_finish_animation"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "show"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_finish_animation"
} ]
}

[node name="Shrooms" type="Area2D"]
collision_layer = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.42219, 3.10962 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hide = SubResource( 2 )
anims/show = SubResource( 3 )

[node name="Gracetimer" type="Timer" parent="."]
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 6
vframes = 2
frame = 11

[connection signal="body_entered" from="." to="." method="_on_Shrooms_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Shrooms_body_exited"]
[connection signal="timeout" from="Gracetimer" to="." method="_on_Gracetimer_timeout"]
